--- a/zc.html
+++ b/zc.html
@@ -10,7 +10,7 @@
     <!-- Google web font "Open Sans" -->
     <link rel="stylesheet" href="fonts/font-awesome-4.5.0/css/font-awesome.min.css">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/zc-bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="js/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="js/slick/slick-theme.css" />
     <link rel="stylesheet" href="css/tooplate-style.css">
